fix ToC overflow

--- a/src/scss/primitives/_sidebar.scss
+++ b/src/scss/primitives/_sidebar.scss
@@ -7,10 +7,6 @@
         display: flex;
         flex-wrap: wrap;
         margin: calc(var(--s2) / 2 * -1);
-
-        @media (max-width: 40em) {
-            flex-direction: column;
-        }
     }
 
     > * > * {
